tests/tests/test038.pl
:- initialization(main).

main :- write('foo
  bar
  baz'), nl.
